--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>池永恵子</h1>
-  <p>UI/UXデザイナー見習いです。ドットインストールで勉強中です。</p>
+  <p>UI/UXデザイナー見習いです。ドットインストールで勉強中です。現在の視聴時間は7時間超です。</p>
 
 
 </body>
